--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "deploy": "wrangler deploy"
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.12.1",
     "nuxt": "^3.17.5",
     "prismjs": "^1.29.0"
+  },
+  "devDependencies": {
+    "wrangler": "^4.20.0"
   }
 }
