Changed Cloudflare config

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,7 +1,5 @@
 {
   "name": "pastesvg",
   "compatibility_date": "2025-06-15",
-  "assets": {
-    "directory": "./dist"
-  }
+  "assets": { "directory": ".output/public", "binding": "ASSETS" }
 }
