Changed Cloudflare config

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.12.1",
     "nuxt": "^3.17.5",
-    "prismjs": "^1.29.0"
+    "prismjs": "^1.29.0",
+    "vue": "^3.5.16"
   },
   "devDependencies": {
     "wrangler": "^4.20.0"
