--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -7,6 +7,7 @@
   "name": "pastesvg",
   "main": "./.output/server/index.mjs",
   "compatibility_date": "2025-06-14",
+  "compatibility_flags": ["nodejs_compat"],
   "assets": {
     "binding": "ASSETS",
     "directory": "./.output/public/"
